chore: update documentation for url path changes
