# app/auth-api/rest/home.go
@@ -7,13 +7,14 @@ import (
 )
 
 // Home @Summary      Get user dashboard
-// @Description  Returns dashboard info for authenticated user
-// @Tags         User
-// @Security     ApiKeyAuth
-// @Produce      json
-// @Success      200   {object}  foundation.Response
-// @Failure      401   {object}  foundation.Response
-// @Router       /user/home [get]
+//
+//	@Description	Returns dashboard info for authenticated user
+//	@Tags			User
+//	@Security		ApiKeyAuth
+//	@Produce		json
+//	@Success		200	{object}	foundation.Response
+//	@Failure		401	{object}	foundation.Response
+//	@Router			/user/home [get]
 func Home(w http.ResponseWriter, _ *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
